[gd_scene load_steps=4 format=3 uid="uid://dqshkg4phk7r3"]

[ext_resource type="Script" path="res://Objects/Selection stuff/SelectionArea.gd" id="1_b4wyq"]
[ext_resource type="Script" path="res://Objects/Selection stuff/selectionVisual.gd" id="2_27tsf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hlpl3"]

[node name="SelectionArea" type="Node2D"]
script = ExtResource("1_b4wyq")

[node name="SelectionVisual" type="Node2D" parent="."]
script = ExtResource("2_27tsf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_hlpl3")

[connection signal="area_entered" from="Area2D" to="." method="selectionEntered"]
[connection signal="area_exited" from="Area2D" to="." method="selectionExited"]
